// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-ooo-command-dates returns expected values for a date range in M/D format in the current year 1`] = `
Object {
  "endDate": 2019-05-24T05:00:00.000Z,
  "startDate": 2019-05-22T05:00:00.000Z,
}
`;

exports[`extract-ooo-command-dates returns expected values for a date range in M/D format in the next year 1`] = `
Object {
  "endDate": 2020-01-17T06:00:00.000Z,
  "startDate": 2020-01-14T06:00:00.000Z,
}
`;

exports[`extract-ooo-command-dates returns expected values for single date as a range in M/D format in the current year 1`] = `
Object {
  "endDate": 2019-05-22T05:00:00.000Z,
  "startDate": 2019-05-22T05:00:00.000Z,
}
`;

exports[`extract-ooo-command-dates returns expected values for single date as a range in M/D format in the next year 1`] = `
Object {
  "endDate": 2020-01-14T06:00:00.000Z,
  "startDate": 2020-01-14T06:00:00.000Z,
}
`;

exports[`extract-ooo-command-dates returns expected values for single date in M/D format in the current year 1`] = `
Object {
  "endDate": 2019-05-22T05:00:00.000Z,
  "startDate": 2019-05-22T05:00:00.000Z,
}
`;

exports[`extract-ooo-command-dates returns expected values for single date in M/D format in the current year 2`] = `
Object {
  "endDate": 2019-05-22T05:00:00.000Z,
  "startDate": 2019-05-22T05:00:00.000Z,
}
`;

exports[`extract-ooo-command-dates returns expected values for single date in M/D format in the next year 1`] = `
Object {
  "endDate": 2020-01-14T06:00:00.000Z,
  "startDate": 2020-01-14T06:00:00.000Z,
}
`;

exports[`extract-ooo-command-dates returns expected values for single date in M/D format in the next year 2`] = `
Object {
  "endDate": 2020-01-14T06:00:00.000Z,
  "startDate": 2020-01-14T06:00:00.000Z,
}
`;
